--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>German Words</title>
+  <base href="/">
 </head>
 <body>
-  <ui-view></ui-view>
+  <div class="container">
+    <ui-view></ui-view>
+  </div>
   <script src="bundle.js"></script>
 </body>
 </html>
