--- a/src/js/home/home.html
+++ b/src/js/home/home.html
@@ -1,1 +1,17 @@
-<div>This works {{home.name}}</div>
+<div class="jumbotron centered">
+  <h1>German words demo!</h1>
+  <p>Click the button below to get a random German word with its translation:</p>
+  <p><a class="btn btn-primary" role="button" ng-click="home.getRandomWord()">Give me a word!</a></p>
+  <div ng-if="home.word">
+    <pre>Word: {{home.word.german}}</pre>
+    <pre ng-if="home.isAuth">Translation: {{home.word.english}}</pre>
+    <p ng-if="!home.isAuth">Please login below to see the translation</p>
+  </div>
+</div>
+<div ng-if="home.isAuth">
+  <p>Welcome back {{home.user.username}}</p>
+  <a href="#" ng-click="logout($event)">Logout</a>
+</div>
+<div ng-if="!home.isAuth">
+  <a ui-sref="login">Login</a>
+</div>
