Refactor webpack config to allow testing and prod

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
   <div class="container">
     <ui-view></ui-view>
   </div>
-  <script src="bundle.js"></script>
+  <script src="app.bundle.js"></script>
 </body>
 </html>
